Adding alt attribute to contributor img

--- a/nshipster.com/_includes/contributor.html
+++ b/nshipster.com/_includes/contributor.html
@@ -13,7 +13,7 @@
     <small>Translated by</small>
   {% endcase %}
 
-  <img class="avatar" itemprop="image" src="//0.gravatar.com/avatar/f32c3cab150e7018cbe4d00401f597e2?size=300" draggable="false"/>
+  <img class="avatar" alt="{{ contributor.name }}" itemprop="image" src="//0.gravatar.com/avatar/f32c3cab150e7018cbe4d00401f597e2?size=300" draggable="false"/>
   <div class="details">
     <span itemprop="name">{{ contributor.name }}</span>
 
