Adding hidden text in logo

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -66,6 +66,8 @@
           {% include ns.svg %}
           {% include mustache.svg %}
         </a>
+
+        <span hidden style="display:none;">NSHipster</span>
       </h1>
 
       {% if false %}
