Adding id='main'

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -98,7 +98,7 @@
       {% endunless %}
     </header>
 
-    <div role="main" itemprop="mainContentOfPage">
+    <div id="main" role="main" itemprop="mainContentOfPage">
       {{ content }}
     </div>
 
