--- a/assets/sass/_fonts.sass
+++ b/assets/sass/_fonts.sass
@@ -16,59 +16,23 @@
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-.icon-mustache:before
+.icon-googleplus:before
   content: "\e600"
 
-.icon-envelope:before
+.icon-facebook:before
   content: "\e601"
 
-.icon-gumroad:before
+.icon-twitter:before
   content: "\e602"
 
-.icon-xcode:before
+.icon-feed:before
   content: "\e603"
 
-.icon-cocoa:before
+.icon-cc:before
   content: "\e604"
 
-.icon-objective-c:before
+.icon-cc-by:before
   content: "\e605"
 
-.icon-osi:before
+.icon-cc-nc:before
   content: "\e606"
-
-.icon-swift:before
-  content: "\e607"
-
-.icon-mobile:before
-  content: "\e608"
-
-.icon-tablet:before
-  content: "\e609"
-
-.icon-mail:before
-  content: "\e60a"
-
-.icon-googleplus:before
-  content: "\e60b"
-
-.icon-facebook:before
-  content: "\e60c"
-
-.icon-twitter:before
-  content: "\e60d"
-
-.icon-feed:before
-  content: "\e60e"
-
-.icon-github:before
-  content: "\e60f"
-
-.icon-apple:before
-  content: "\e610"
-
-.icon-safari:before
-  content: "\e612"
-
-.icon-cc:before
-  content: "\e613"
