Fixing text size of newsletter button

--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -224,6 +224,9 @@ html, body
       font-size: 0.75em
       padding: 15px 0
 
+      +media($tablet)
+        font-size: 0.67em
+
 
 // Typography
 
