Fixing display of tagline

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -74,7 +74,7 @@
         <input type="text" id="st-search-input" class="st-search-input" />
       </form>
 
-      {% if page.path == "/" %}
+      {% if page.title == "NSHipster" %}
         <h2 class="tagline">{{ site.description }}</h2>
       {% endif %}
     </header>
