Adding JavaScript to default template

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -120,5 +120,8 @@
     ga('create', 'UA-49868484-1', 'nshipster.com');
     ga('send', 'pageview');
   </script>
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="/js/application.js"></script>
 </body>
 </html>
