Mac OS X -> OS X

--- a/nshipster.ru/_layouts/post.html
+++ b/nshipster.ru/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
         <h1><a href="https://gum.co/nshipster">NSHipster: Obscure Topics in Cocoa &amp; Objective-C</a></h1>
         <h2>Now Available</h2>
       </hgroup>
-      <p>Combining articles from NSHipster.com with new essays, this book is the essential guide for modern iOS and Mac OS X developers.</p>
+      <p>Combining articles from NSHipster.com with new essays, this book is the essential guide for modern iOS and OS X developers.</p>
       <button onclick="javascript:window.location.href='https://gum.co/nshipster'">Now Available</button>
     </div>
   </footer>
