--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -39,16 +39,23 @@
     <meta name="twitter:description" content="{{ site.description | strip_html | escape}}"/>
   {% endif %}
 
-  <meta content="{{ site.title }}" property="og:site_name"/>
+  <meta property="og:site_name" content="{{ site.title }}"/>
+  <meta property="og:image" content=""/>
   {% if page.id %}
-    <meta content="{{ page.title }}" property="og:title"/>
-    <meta content="{{ site.url }}{{ page.url }}" property="og:url"/>
-    <meta content="{{ page.excerpt | strip_html | escape }}" property="og:description"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="{{ page.title }}"/>
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
+    <meta property="og:description" content="{{ page.excerpt | strip_html | escape }}"/>
+    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}"/>
+    <meta property="article:modified_time" content="{{ site.time | date_to_xmlschema }}"/>
+    <meta property="article:tag" content="{{ page.categories | join: ',' }}"/>
+    <meta property="article:publisher" content="https://www.facebook.com/NSHipster">
   {% else %}
-    <meta content="{{ site.title }}" property="og:title"/>
-    <meta content="{{ site.url }}" property="og:url"/>
-    <meta content="{{ site.description | strip_html | escape}}" property="og:description"/>
+    <meta property="og:title" content="{{ site.title }}"/>
+    <meta property="og:url" content="{{ site.url }}"/>
+    <meta property="og:description" content="{{ site.description | strip_html | escape}}" />
   {% endif %}
+  <meta property="fb:admins" content="{{ site.facebook }}">
 
   {% if page.id %}
     <meta property="st:title" content="{{ page.title }}"/>
