Adding twitter:account_id property

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -38,6 +38,7 @@
     <meta name="twitter:title" content="{{ site.title }}"/>
     <meta name="twitter:description" content="{{ site.description | strip_html | escape}}"/>
   {% endif %}
+  <meta property="twitter:account_id" content="{{ site.twitter }}"/>
 
   <meta property="og:site_name" content="{{ site.title }}"/>
   <meta property="og:image" content="{{ site.url }}//touch-icon-ipad-retina.png"/>
