Fixing alternate links

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -11,14 +11,14 @@
     <title>{{ page.title | strip_html }}</title>
     <meta name="description" content="{{ site.description | strip_html }}"/>
     <link rel="canonical" href="{{ site.url }}"/>
+    <link rel="alternate" hreflang="en-us" href="http://nshipster.com/"/>
+    <link rel="alternate" hreflang="zh-Hans" href="http://nshipster.cn/"/>
+    <link rel="alternate" hreflang="x-default" href="http://nshipster.com/"/>
   {% endif %}
   <meta name="author" content="Mattt Thompson"/>
   <meta name="revisit-after" content="7 days"/>
   <meta name="viewport" content="width=device-width"/>
   <link rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"/>
-  <link rel="alternate" hreflang="en-us" href="http://nshipster.com"/>
-  <link rel="alternate" hreflang="zh-Hans" href="http://nshipster.cn"/>
-  <link rel="alternate" hreflang="x-default" href="http://nshipster.com"/>
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.url }}/feed.xml"/>
   <link rel="stylesheet" type="text/css" href="/css/screen.css"/>
   <link rel="apple-touch-icon" href="/touch-icon-iphone.png"/>
