Adding custom top sites preview screen

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -106,6 +106,12 @@
   </div>
 
   <script>
+    if (window.navigator && window.navigator.loadPurpose === "preview") {
+      window.location.href = "http://nshipster.com/topsites_preview.html";
+    }
+  </script>
+
+  <script>
     var Swiftype = window.Swiftype || {};
     (function() {
       Swiftype.key = 'Q5jNBiR8qVs5xE5dNect';
