Switching over to full image URL for contributors

--- a/nshipster.com/_includes/contributor.html
+++ b/nshipster.com/_includes/contributor.html
@@ -5,7 +5,7 @@
 <div class="contributor" itemprop="author" itemscope itemtype="http://data-vocabulary.org/Person">
   <small>Written by</small>
 
-  <img class="avatar" alt="{{ contributor.name }}" itemprop="image" src="//0.gravatar.com/avatar/{{ contributor.gravatar }}?size=300" draggable="false"/>
+  <img class="avatar" alt="{{ contributor.name }}" itemprop="image" src="{{ contributor.image }}" draggable="false"/>
   <div class="details">
     <span itemprop="name">{{ contributor.name }}</span>
 
