--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -2,14 +2,16 @@
 layout: default
 ---
 
-{% assign author = site.data.authors["Mattt Thompson"] %}
-
 <article role="article" id="{{ page.id | remove: '/' }}" itemscope itemtype="http://schema.org/Article">
   <header role="heading">
     <h1 class="title" itemprop="name">
       <a href="{{ page.url }}">{{ page.title | camel_break }}</a>
     </h1>
+
+    {% if page.author %}
+    {% assign author = site.data.authors[page.author] %}
     <h2>Written by <a class="author" href="{{ author.url }}">{{ author.name }}</a> on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | ordinalize }}</time></h2>
+    {% endif %}
   </header>
 
   <div class="content" itemprop="articleBody" data-swiftype-index="true">
