Update CFHipsterRef callout

--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 
   <div class="content" itemprop="articleBody" data-swiftype-index="true">
     {% if page.tags contains "cfhipsterref" %}
-      <ins style="display:block;margin-bottom: 2em;padding:1em">This is an excerpt from <em>CFHipsterRef: Low-Level Programming on iOS &amp; OS X</em>, which just came out of beta and is <a href="https://gumroad.com/l/cfhipsterref" target="_blank" title="Buy CFHipsterRef on Gumroad">available for purchase</a>. (Print version should arrive on Amazon in the next week.) I really hope you like it.</ins>
+      <ins style="display:block;margin-bottom: 2em;padding:1em">This is an excerpt from <em>CFHipsterRef: Low-Level Programming on iOS &amp; OS X</em>, which just came out of beta and is <a href="https://gumroad.com/l/cfhipsterref" target="_blank" title="Buy CFHipsterRef on Gumroad">available for purchase</a>.  I really hope you like it.</ins>
     {% endif %}
 
     {{ content }}
