--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -17,7 +17,7 @@
   {% endif %}
   <meta name="author" content="Mattt Thompson"/>
   <meta name="revisit-after" content="7 days"/>
-  <meta name="viewport" content="width=device-width"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"/>
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.url }}/feed.xml"/>
   <link rel="stylesheet" type="text/css" href="/css/screen.css"/>
