--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -41,7 +41,7 @@
   <meta property="twitter:account_id" content="{{ site.twitter }}"/>
 
   <meta property="og:site_name" content="{{ site.title }}"/>
-  <meta property="og:image" content="{{ site.url }}//touch-icon-ipad-retina.png"/>
+  <meta property="og:image" content="{{ site.url }}/touch-icon-ipad-retina.png"/>
   {% if page.id %}
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="{{ page.title }}"/>
