Removing incorrect id attribute

--- a/nshipster.cn/_layouts/post.html
+++ b/nshipster.cn/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 {% assign author = site.data.authors["Mattt Thompson"] %}
 
-<article role="article" id="{{ page.id | remove: '/' }}" itemscope itemtype="http://schema.org/Article">
+<article role="article" itemscope itemtype="http://schema.org/Article">
   <header role="heading">
     <h1 class="title" itemprop="name">
       <a href="{{ page.url }}">{{ page.title | camel_break }}</a>
