--- a/nshipster.com/_includes/contributor.html
+++ b/nshipster.com/_includes/contributor.html
@@ -1,20 +1,16 @@
-{% if page.author %}
+{% if author %}
+  <div class="contributor" itemprop="author" itemscope itemtype="http://data-vocabulary.org/Person">
+    <small>Written by</small>
 
-{% assign contributor = site.data.authors[page.author] %}
+    <img class="avatar" alt="{{ author.name }}" itemprop="image" src="{{ author.image }}" draggable="false"/>
+    <div class="details">
+      <span itemprop="name"><a href="{{ author.url }}">{{ author.name }}</a></span>
 
-<div class="contributor" itemprop="author" itemscope itemtype="http://data-vocabulary.org/Person">
-  <small>Written by</small>
+      {{ author.bio | markdownify }}
 
-  <img class="avatar" alt="{{ contributor.name }}" itemprop="image" src="{{ contributor.image }}" draggable="false"/>
-  <div class="details">
-    <span itemprop="name">{{ contributor.name }}</span>
-
-    {{ contributor.bio | markdownify }}
-
-    {% if contributor.google %}
-      <a href="https://plus.google.com/{{ contributor.google }}?rel=author" rel="author"></a>
-    {% endif %}
+      {% if author.google %}
+        <a href="https://plus.google.com/{{ author.google }}?rel=author" rel="author"></a>
+      {% endif %}
+    </div>
   </div>
-</div>
-
 {% endif %}
