--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -20,13 +20,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"/>
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ site.url }}/feed.xml"/>
-  <link rel="stylesheet" type="text/css" href="/css/screen.css"/>
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/screen.css"/>
   <link rel="apple-touch-icon" href="/touch-icon-iphone.png"/>
   <link rel="apple-touch-icon" sizes="76x76" href="/touch-icon-ipad.png"/>
   <link rel="apple-touch-icon" sizes="120x120" href="/touch-icon-iphone-retina.png"/>
   <link rel="apple-touch-icon" sizes="152x152" href="/touch-icon-ipad-retina.png"/>
   <link rel="icon" sizes="16x16 24x24 32x32 48x48 64x64" type="image/vnd.microsoft.icon" href="/favicon.ico"/>
-  <link rel="author" type="text/plain" href="http://nshipster.com/humans.txt"/>
+  <link rel="author" type="text/plain" href="{{ site.url }}/humans.txt"/>
 
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@NSHipster"/>
@@ -107,11 +107,11 @@
 
   <script>
     if (window.navigator && window.navigator.loadPurpose === "preview") {
-      window.location.href = "http://nshipster.com/topsites_preview.html";
+      window.location.href = "{{ site.url }}/topsites_preview.html";
     }
   </script>
 
-  <script>
+  <script async>
     var Swiftype = window.Swiftype || {};
     (function() {
       Swiftype.key = 'Q5jNBiR8qVs5xE5dNect';
@@ -135,6 +135,6 @@
   </script>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="/js/application.js"></script>
+  <script src="{{ site.url }}/js/application.js"></script>
 </body>
 </html>
