--- a/nshipster.com/_layouts/post.html
+++ b/nshipster.com/_layouts/post.html
@@ -2,15 +2,22 @@
 layout: default
 ---
 
-<article role="article" id="{{ page.id | remove: '/' }}" itemscope itemtype="http://schema.org/Article">
+<article role="article" itemscope itemtype="http://schema.org/Article">
   <header role="heading">
     <h1 class="title" itemprop="name">
       <a href="{{ page.url }}">{{ page.title | camel_break }}</a>
     </h1>
 
-    {% if page.author %}
-    {% assign author = site.data.authors[page.author] %}
-    <h2>Written by <a class="author" href="{{ author.url }}">{{ author.name }}</a> on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | ordinalize }}</time></h2>
+    {% for candidate in site.authors %}
+      {% if page.author == candidate.name %}
+        {% assign author = candidate %}
+      {% endif %}
+    {% endfor %}
+
+    {% if author %}
+      <h2>Written by <a class="author" href="{{ author.url }}">{{ author.name }}</a> on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | ordinalize }}</time></h2>
+    {% else %}
+      <h2>Written on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | ordinalize }}</time></h2>
     {% endif %}
   </header>
 
