Replacing jQuery with Zepto

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -134,7 +134,7 @@
     ga('send', 'pageview');
   </script>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="{{ site.url }}/js/zepto.min.js"></script>
   <script src="{{ site.url }}/js/application.js"></script>
 </body>
 </html>
