--- a/nshipster.com/_includes/book.html
+++ b/nshipster.com/_includes/book.html
@@ -1,16 +1,17 @@
-{% assign content = site.data.books[include.book] %}
+{% assign book = site.books | where:"name",include.book | first %}
+
 <div id="{{ identifier }}" class="book" itemscope itemtype="http://schema.org/Product">
   <div itemscope itemtype="http://schema.org/Book">
     <link itemprop="bookFormat" href="http://schema.org/EBook"/>
-    <a href="{{ content.url }}" title="{{ content.title }}">
-      <img src="{{ content.image }}" class="cover" alt="{{ content.title }}" itemprop="image"/>
+    <a href="{{ book.book_url }}" title="{{ book.title }}" target="_blank">
+      <img src="{{ book.image }}" class="cover" alt="{{ book.title }}" itemprop="image"/>
     </a>
-    <span itemprop="name" style="display:none;" hidden>{{ content.title }}</span>
-    <span itemprop="author" style="display:none;" hidden>{{ content.author }}</span>
+    <span itemprop="name" style="display:none;" hidden>{{ book.title }}</span>
+    <span itemprop="author" style="display:none;" hidden>{{ book.author }}</span>
     <div itemprop="offers" itemscope itemtype="http://schema.org/Offer" style="display:none;">
       <link itemprop="availability" href="http://schema.org/InStock"/>
       <meta itemprop="priceCurrency" content="USD"/>
-      <span itemprop="price">{{ content.price }}</span>
+      <span itemprop="price">{{ book.price }}</span>
     </div>
   </div>
 </div>
