Shifting bios to content.

--- a/nshipster.cn/_includes/contributor.html
+++ b/nshipster.cn/_includes/contributor.html
@@ -24,8 +24,8 @@
     <div class="details">
       <span itemprop="name"><a href="{{ contributor.url }}">{{ contributor.name }}</a></span>
    
-      {{ contributor.bio | markdownify }}
-   
+      {{ contributor.content | markdownify }}
+
       {% if contributor.google %}
         <a href="https://plus.google.com/{{ contributor.google }}?rel=author" rel="author"></a>
       {% endif %}
