--- a/nshipster.cn/_layouts/translator.html
+++ b/nshipster.cn/_layouts/translator.html
@@ -11,7 +11,7 @@ layout: default
     {% endif %}
     <h1 itemprop="name">{{ page.name }}</h1>
 
-    {{ page.bio | markdownify }}
+    {{ page.content | markdownify }}
   </header>
 
 
