--- a/nshipster.com/_includes/contributor.html
+++ b/nshipster.com/_includes/contributor.html
@@ -6,7 +6,7 @@
     <div class="details">
       <span itemprop="name"><a href="{{ author.url }}">{{ author.name }}</a></span>
 
-      {{ author.bio | markdownify }}
+      {{ author.content | markdownify }}
 
       {% if author.google %}
         <a href="https://plus.google.com/{{ author.google }}?rel=author" rel="author"></a>
