Adding source language toggles.

--- a/nshipster.cn/_layouts/default.html
+++ b/nshipster.cn/_layouts/default.html
@@ -143,5 +143,8 @@
     ga('create', 'UA-49868484-2', 'auto');
     ga('send', 'pageview');
   </script>
+
+  <script src="{{ site.url }}/js/zepto.min.js"></script>
+  <script src="{{ site.url }}/js/application.js"></script>
 </body>
 </html>
