Minor stylesheet changes for printing support.

--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -671,3 +671,9 @@ a:hover
 
     &:hover
       text-decoration: none !important
+
+@media print
+  body
+    font-size: 70%
+  img
+    max-width: 50%
