Adding support for revisions

--- a/assets/sass/screen.sass
+++ b/assets/sass/screen.sass
@@ -179,6 +179,9 @@ html, body
     p
       +multiline-truncate
 
+#revisions
+  border-top: 1px #ccc solid
+  padding: 1em 0 0
 
 #follow
   border-top: 1px #ccc solid
@@ -478,6 +481,7 @@ a, a:visited
       text-align: center
       display: block
 
+
 .archive
   dl
     +span-columns(4 of 12)
@@ -623,7 +627,7 @@ a:hover
     font-size: 110%
 
 .highlight-group
-  padding-top: 1em
+  margin-top: 1em
 
 .language-toggle
   +row
