Hiding single language code block labels

--- a/nshipster.com/_layouts/default.html
+++ b/nshipster.com/_layouts/default.html
@@ -63,6 +63,8 @@
   {% else %}
     <meta property="st:type" content="home"/>
   {% endif %}
+  
+  <meta property="nshipster:hide-single-lang" content="{{ page.hiddenlang }}"/>
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage">
